2007-03-12  David Lodge <dave@cirt.net>

	* modules.tmpl: 
	* show-stats.tmpl: More fixes to make individual module pages XHTML

2007-03-12  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Rhythmbox branched for RHYTHMBOX-0_10.

2007-03-12  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Modules branched for 2.18 (gail, atk, at-spi,
	gcalctool, gnome-icon-theme)

2007-03-12  David Lodge <dave@cirt.net>

	* releases.xml.in: Removed gnome-app-install, gnome-glossary, optimystic
	* gnome-modules.xml.in: as they aren't in svn

2007-03-12  David Lodge <dave@cirt.net>

	* releases.xml.in: Added tracker and removed uf-view
	* modules.xml.in: Removed uf-view (isn't in svn)

2007-03-11  David Lodge <dave@cirt.net>

	* releases.xml.in: Removed null branch from drivel so it will show up in extras

2007-03-11  David Lodge <dave@cirt.net>

	* releases.xml.in: Added damned-lies in extras. Sort of ironic really.

2007-03-11  Danilo Šegan  <danilo@gnome.org>

	* releases.xml.in: And note branches here. Sigh.

2007-03-11  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Branch gnome-utils, epiphany,
	epiphany-extensions for 2.18.

2007-03-11  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added gtk-engines module in extras.

2007-03-10  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added 2.18 release notes.

2007-03-10  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Commented out gst-boot doc.

2007-03-10  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added hipo module in extras.

2007-03-10  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Reordering modules in alphabetic order.

2007-03-07  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: glade3 and dasher branched for 2.18.

2007-03-06  Daniel Nylander <po@danielnylander.se>
