@@ -43,11 +43,6 @@
     </defaults>
     <branch id="HEAD"/>
   </module>
-  <module id="at-spi">
-    <branch id="HEAD"/>
-    <branch id="gnome-2-14" stringfrozen="true"/>
-    <branch id="gnome-2-18" stringfrozen="true"/>
-  </module>
   <module id="atk">
     <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
