@@ -12,7 +12,6 @@
     </category>
     <category id="platform">
       <_description>Development Platform</_description>
-      <module id="at-spi" branch="gnome-2-14"/>
       <module id="atk" branch="gnome-2-14"/>
       <module id="gail"/>
       <module id="gconf" branch="gnome-2-14"/>
@@ -244,7 +243,6 @@
     <_description>Gnome 2.16</_description>
     <category id="platform">
       <_description>GNOME developer platform. Essential software.</_description>
-      <module id="at-spi"/>
       <module id="atk"/>
       <module id="gail"/>
       <module id="gconf"/>
@@ -331,7 +329,6 @@
     <_description>Gnome 2.18</_description>
     <category id="platform">
       <_description>GNOME developer platform.</_description>
-      <module id="at-spi" branch="gnome-2-18"/>
       <module id="atk" branch="gnome-2-18"/>
       <module id="gail" branch="gnome-2-18"/>
       <module id="gconf"/>
